[package]
name = "nano-ogmo"
version = "0.1.3"
authors = ["Bombfuse <eiffeldud@gmail.com>"]
edition = "2018"
description = "Small cross platform ogmo3 deserialization"
repository = "https://github.com/Bombfuse/nano-ogmo"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nano_ogmo"
path = "src/lib.rs"

[dependencies]
nanoserde = "0.1.29"
